[package]
name = "stash-snitch"
version = "0.3.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
directories = "3.0"
env_logger = "0.7"
humantime = "2.0"
reqwest = { version = "0.10", features = ["blocking", "cookies"] }
rusqlite = { version = "0.24", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
url = "2.1"